--- a/seckill_uniqueid/server/pom.xml
+++ b/seckill_uniqueid/server/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>server</artifactId>
+    <artifactId>uniqueid-server</artifactId>
     <packaging>jar</packaging>
     <dependencies>
     <dependency>
